Fix find input misalignment

--- a/frontend/src/styles/variables.module.scss
+++ b/frontend/src/styles/variables.module.scss
@@ -24,7 +24,6 @@
   --kiali-details-pages-tab-content-height: calc(100vh - 130px - var(--pf-v5-c-page__header--MinHeight));
 
   // Graph CSS variables
-  --graph-find-input--width: 15em;
   --graph-side-panel--font-size: kialiFontSize;
   --graph-side-panel--font-size-px: kialiFontSizePx;
 
